open create column modal automatically on first run
Signed-off-by: Florian Steffens <flost-dev@mailbox.org>

--- a/css/grid.css
+++ b/css/grid.css
@@ -109,6 +109,10 @@
     position: relative;
 }
 
+[class^='box-'].light {
+    background-color: var(--color-background-hover);
+}
+
 /* ===== RESIZE OR HIDE COMPONENTS ON SMALL SCREENS ============== */
 @media only screen and (max-width: 1025px) {
     .hide-m {
