--- a/css/icons.scss
+++ b/css/icons.scss
@@ -7,7 +7,7 @@
 @include icon-black-white('link', 'text', 1);
 @include icon-black-white('ol', 'text', 1);
 @include icon-black-white('ul', 'text', 1);
-@include icon-black-white('checkmark', 'text', 1);
+@include icon-black-white('checkbox-mark', 'text', 1);
 @include icon-black-white('hr', 'text', 1);
 @include icon-black-white('quote', 'text', 1);
 @include icon-black-white('paragraph', 'text', 1);
